# quichash

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/hash-utility/: design.md  requirements.md  tasks.md
src/: analyze.rs  benchmark.rs  cli.rs  compare.rs  database.rs  dedup.rs  error.rs  hash.rs  ignore_handler.rs  main.rs  path_utils.rs  scan.rs  verify.rs
tests/: hashignore_integration_test.rs  international_filenames_test.rs
