[package]
name = "hash"
version = "0.0.11"
edition = "2021"

[[bin]]
name = "hash"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = "1.8"
rayon = "1.11"
indicatif = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ignore = "0.4"
crossbeam-channel = "0.5"
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
xz2 = "0.1"
glob = "0.3"
memmap2 = "0.9"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
incremental = false

[profile.bench]
inherits = "release"
