[package]
name = "hash-rs"
version = "0.0.17"
edition = "2021"
description = "High-performance cryptographic hash utility with SIMD optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vyrti/hash-rs"
homepage = "https://github.com/vyrti/hash-rs"
readme = "README.md"
keywords = ["hash", "blake3", "sha256", "checksum", "crypto"]
categories = ["command-line-utilities", "cryptography"]
exclude = [".vscode/", ".github/", ".gitignore", "CLAUDE.md"]

[[bin]]
name = "hash"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "std", "help", "usage", "error-context"], default-features = false }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
blake3 = { version = "1.8", features = ["rayon"] }
rayon = "1.11"
indicatif = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ignore = "0.4"
crossbeam-channel = "0.5"
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
xz2 = "0.1"
glob = "0.3"
memmap2 = "0.9"

[dev-dependencies]
hex = "0.4"
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
incremental = false

[profile.bench]
inherits = "release"
